name:                hrogue
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ChrisCoffey/hrogue#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Coffey
maintainer:          example@example.com
copyright:           2017 Chris Coffey
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Engine.Map
                     , Render.Ascii
  other-modules:       Engine.Loop,
                       Engine.Types,
                       Engine.Util,
                       Engine.Level.Room
  build-depends:       base >= 4.7 && < 5
                     , random
                     , matrix
                     , mtl
                     , vector
                     , containers
  default-language:    Haskell2010

executable hrogue-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hrogue
                     , random
  default-language:    Haskell2010

test-suite hrogue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hrogue
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisCoffey/hrogue
